# gh-audit

./: .gitignore  README.md  flake.nix  pyproject.toml
gh_audit/: __init__.py  cli.py  core.py  github_api.py  types.py
gh_audit/rules/: __init__.py  dependabot.py  general.py  github_actions.py  nix.py  python.py
